gobmkida/c2/have_common_lib
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/have_common_lib/src/engine/board.c:2582:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v15] == v13 && string[239].neighborlist[v15 + 160] == string_number[v10] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/have_common_lib/src/engine/board.c:2583:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v15] == v13 && string[239].neighborlist[v15 + 141] == string_number[v10] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/have_common_lib/src/obj/1/board.o] Error 1
